# rustc-bug

./: Cargo.toml  README.md
src/: main.rs  user.rs
