[package]
name = "rustc-bug"
version = "0.1.0"
authors = ["Daniel Wiesenberg <weasy@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", default-features = false, features = ["private-cookies"] }
rocket_airlock = { git = "https://github.com/Weasy666/rocket_airlock", branch = "master" }
log = "0.4"
